--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Firebase keys
+android/app/google-services.json
+ios/firebase_app_id_file.json
+lib/firebase_options.dart
