--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   get_it: ^7.2.0
   google_fonts: ^2.3.2
   rxdart: ^0.27.3
+  url_strategy: ^0.2.0
 
 # Our packages:
   keyed_collection_widgets: ^0.2.0
