--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,12 @@ environment:
 
 dependencies:
   cloud_firestore: ^3.1.13
+  collection: ^1.16.0
   flutter_markdown: ^0.6.10
   get_it: ^7.2.0
   google_fonts: ^2.3.2
   rxdart: ^0.27.3
+  url_launcher: ^6.1.2
   url_strategy: ^0.2.0
 
 # Our packages:
