--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
   flutter: ">=3.0.0"
 
 dependencies:
+  charcode: ^1.3.1
   cloud_firestore: ^3.1.13
   collection: ^1.16.0
   flutter_markdown: ^0.6.10
