--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   rxdart: ^0.27.3
   url_launcher: ^6.1.2
   url_strategy: ^0.2.0
+  version: ^2.0.0
 
 # Our packages:
   app_state: ^0.3.5
